--- a/SchoolGallery/SchoolGallery.csproj
+++ b/SchoolGallery/SchoolGallery.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <Folder Include="Upload\Files\" />
     <Folder Include="Upload\Videos\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
   <ItemGroup>
