--- a/SchoolGallery/appsettings.json
+++ b/SchoolGallery/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DB": "server=127.0.0.1;User=sa;Password=123456;database=SchoolGallery;"
+    "DB": "server=localhost;User=sq_ykzz;Password=ykzz123;database=SchoolGallery;"
 
 
   },
