--- a/SchoolGallery/appsettings.json
+++ b/SchoolGallery/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DB": "server=localhost;User=sq_ykzz;Password=ykzz123;database=SchoolGallery;"
-
+    //"DB": "server=localhost;User=sq_ykzz;Password=ykzz123;database=SchoolGallery;"
+    "DB": "server=localhost;User=sa;Password=123456;database=SchoolGallery;"
 
   },
   "Logging": {
